# PowerShell-Chatbot-GPT

./: .env.example  .gitignore  GEMINI.md  anthropic.bat  bot.py  gem.py  gemini.bat  grok.bat  image_analyzer.ps1  openai.bat  perplexity.bat  plex.py  pyproject.toml  readme.md
src/: anthropic.py  bot.py  chatbot_base.py  gem.py  grok.py  plex.py
tests/: test_chatbot_base.py  test_model_bots.py
